WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193387
[WPE][MiniBrowser] Ephemeral WebContext leaks in automation mode
https://bugs.webkit.org/show_bug.cgi?id=193387
Summary
[WPE][MiniBrowser] Ephemeral WebContext leaks in automation mode
Philippe Normand
Reported
2019-01-13 08:05:15 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2019-01-13 08:07:10 PST
Committed
r239906
: <
https://trac.webkit.org/changeset/239906
>
Radar WebKit Bug Importer
Comment 2
2019-01-13 08:08:28 PST
<
rdar://problem/47238486
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug