[WPE][MiniBrowser] Ephemeral WebContext leaks in automation mode https://bugs.webkit.org/show_bug.cgi?id=193387

Reviewed by Carlos Garcia Campos.

* MiniBrowser/wpe/main.cpp:
(main):

Canonical link: https://commits.webkit.org/207887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239906 268f45cc-cd09-0410-ab3c-d52691b4dbfc